hphp/hack/test/typecheck/coeffects/rx_no_unsafe.php.like_types.exp
File "rx_no_unsafe.php", line 10, characters 3-13:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "rx_no_unsafe.php", line 8, characters 17-23:
  From this declaration, the context of this function body provides the capability set {Rx, WriteProperty}
  File "rx_no_unsafe.php", line 4, characters 21-30:
  But the function being called requires the default capability set {AccessGlobals, Output, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "rx_no_unsafe.php", line 14, characters 3-9:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "rx_no_unsafe.php", line 13, characters 19-20:
  From this declaration, the context of this function body provides the capability set {}
  File "rx_no_unsafe.php", line 8, characters 17-23:
  But the function being called requires the capability set {Rx, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
